# understanding-llm

./: .gitignore  README.md  pyproject.toml  show_ollama.ipynb  understand_context.ipynb  understand_tokens.ipynb
understanding_llm/: __init__.py  functions.py
